# alabjs

./: .gitignore  .npmrc  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  docs.yml  release.yml
crates/alab-compiler/: Cargo.toml
crates/alab-compiler/src/: boundary.rs  directive.rs  error.rs  extractor.rs  image_opt.rs  lib.rs  route_checker.rs  transform.rs
crates/alab-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/alab-napi/npm/darwin-arm64/: package.json
crates/alab-napi/npm/darwin-x64/: package.json
crates/alab-napi/npm/linux-arm64-gnu/: package.json
crates/alab-napi/npm/linux-x64-gnu/: package.json
crates/alab-napi/npm/win32-x64-msvc/: package.json
crates/alab-napi/src/: lib.rs
crates/alab-router/: Cargo.toml
crates/alab-router/src/: lib.rs  manifest.rs  scanner.rs
docs/: analytics.md  astro.config.mjs  cdn-cache.md  concepts.md  data-fetching.md  devtools.md  env-variables.md  index.md  installation.md  introduction.md  link.md  live-components.md  microfrontend.md  mutations.md  package.json  ppr.md  roadmap.md  routing.md  script.md  server-functions.md  skew-protection.md  ssr-csr.md  tsconfig.json
docs/.astro/astro/: content.d.ts
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts  shims.d.ts
docs/deployment/: bun.md  cloudflare.md  deno.md  fly.md  node.md  railway.md
docs/guides/: fullstack-seo.md  monorepo.md  spa.md
docs/migration/: from-nextjs.md  from-tanstack-start.md
docs/reference/: cache.md  cli.md  i18n.md  offline.md  signals.md  sse.md  testing.md
docs/src/content/docs/: data-fetching.md  image.md  index.md  installation.md  introduction.md  link.md  mutations.md  project-structure.md  routing.md  script.md  server-functions.md  ssr-csr.md
docs/src/content/docs/deployment/: cloudflare.md  node.md
docs/src/content/docs/guides/: fullstack-seo.md  spa.md
docs/src/content/docs/reference/: cache.md  cli.md  i18n.md  offline.md  signals.md  sse.md  testing.md
docs/src/styles/: custom.css
e2e/: package.json  playwright.config.ts  tsconfig.json
e2e/helpers/: exec.ts
e2e/tests/: build.spec.ts  data-flow.spec.ts  dev.spec.ts  production.spec.ts
examples/basic-ssr/: env.d.ts  package.json  tsconfig.json
examples/basic-ssr/app/: globals.css  layout.tsx  nav.tsx  page.tsx
examples/basic-ssr/app/posts/: _data.ts  error.tsx  loading.tsx  page.server.ts  page.tsx
examples/basic-ssr/app/posts/[id]/: page.server.ts  (+1 more)
examples/dashboard-csr/: .gitignore  env.d.ts  package.json  tsconfig.json
examples/dashboard-csr/app/: globals.css  layout.tsx  nav.tsx  page.tsx
examples/dashboard-csr/app/activity/: page.tsx  route.ts
examples/dashboard-csr/app/users/: page.server.ts  page.tsx
examples/live-dashboard/: package.json  tsconfig.json
examples/live-dashboard/app/: _data.ts  alerts-feed.live.tsx  layout.tsx  page.tsx  stock-ticker.live.tsx
scripts/: copy-napi-binary.mjs  copy-napi-binary.sh  sync-version.mjs
(+4 files in other folders)
