[package]
name = "alab-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
oxc_transformer.workspace = true
oxc_codegen.workspace = true
oxc_semantic.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
