[package]
name = "alab-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
alab-compiler = { path = "../alab-compiler" }
alab-router = { path = "../alab-router" }
napi.workspace = true
napi-derive.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
