[package]
name = "alab-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
alab-compiler = { path = "../alab-compiler" }
alab-router = { path = "../alab-router" }
napi = { version = "2", features = ["napi8", "async"] }
napi-derive.workspace = true
tokio = { version = "1", features = ["rt"] }
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
